--- a/CSS/style.css
+++ b/CSS/style.css
@@ -279,6 +279,7 @@ address {
 .modal-form-input {
     width: 100%;
     height: 40px;
+    padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
